--- a/index.html
+++ b/index.html
@@ -58,20 +58,18 @@
 
 <body>
 
-
-
-
-
 <!-- Video Container -->
 <div class="Container">
   <div class="row videoArea">
       <div class="playButton"></div>
-      <div class="shopButton"></div> 
+      <div class="shopButton"></div>  
 
       <div id="myVideo" data-vimeo-id="492002363" 
                         data-vimeo-controls="false"
                         data-vimeo-autoplay="true"
-                        data-vimeo-width="800"></div>
+                        data-vimeo-background="true"
+                        ></div>
+      
        <!-- Vimeo player script and SDK import -->
     <script src="https://player.vimeo.com/api/player.js"></script>
     <script>
