Han: add loading screen

--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
                                  <div class="circle three"></div>
                               </div>
 
+                              <!-- loading screen -->
+                              <div id="loading" class="loading">
+                                <img src="images/loading.png">
+                              </div>
                              <!-- pop up slideshow experience -->
                             
                               <div id="Carousel" class="carousel slide" data-ride="carousel">
@@ -143,11 +147,23 @@
       player.on('play', function() {
         console.log('Played the video');           
       });
+      var jumpSecond = 33;
+      var playButtonClicked = false;
+      player.on('timeupdate', function(data){
+        if(data.seconds == jumpSecond && playButtonClicked == true){
+          console.log("reached jump point")
+          document.getElementById("loading").style.display = "none";
+        }
+      })
+
 
       //play button
       function playDisplayPart() {
-        player.setCurrentTime(30.456);
+        playButtonClicked = true;
+        document.getElementById("loading").style.display = "inline";
+        player.setCurrentTime(jumpSecond);
         document.getElementById("play").style.display = "none";
+        
       }
 
       function displayCarousel() {
