Han: add loading screen

--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
         if(data.seconds == jumpSecond && playButtonClicked == true){
           console.log("reached jump point")
           document.getElementById("loading").style.display = "none";
+          playButtonClicked = false;
         }
       })
 
