--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                               </div>
                              <!-- pop up slideshow experience -->
                             
-                              <div id="Carousel" class="carousel slide" data-ride="carousel">
+                              <div id="Carousel" class="carousel slide" data-ride="carousel" data-interval="false">
                                 <!-- Indicators -->
                                 <ol class="carousel-indicators">
                                   <li data-target="#Carousel" data-slide-to="0" class="active"></li>
@@ -188,7 +188,7 @@
     </div>
 
       
-       <!-- Vimeo player script and SDK import -->
+    <!-- Vimeo player script and SDK import -->
     <script src="https://player.vimeo.com/api/player.js"></script>
     <script>
       //player setup
